--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 */.idea
+/.idea/.author_contents_storage_db
+/.idea/.author_contents_storage_db-shm
+/.idea/.author_contents_storage_db-wal
+/.idea/100-Days-of-Code---The-Complete-Python-Pro-Bootcamp.iml
+/.idea/misc.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/shelf/Day_14_work/shelved.patch
+/.idea/shelf/Uncommitted_changes_before_Checkout_at_09_03_2025_17_13_[Changes]/shelved.patch
+/.idea/shelf/Uncommitted_changes_before_rebase_[Changes]/shelved.patch
+/.idea/shelf/Uncommitted_changes_before_Update_at_09_03_2025_17_12_[Changes]/shelved.patch
+/.idea/shelf/Uncommitted_changes_before_Update_at_09_03_2025_17_16_[Changes]/shelved.patch
+/.idea/shelf/Uncommitted_changes_before_Checkout_at_09_03_2025_17_13__Changes_.xml
+/.idea/shelf/Uncommitted_changes_before_rebase__Changes_.xml
+/.idea/shelf/Uncommitted_changes_before_Update_at_09_03_2025_17_12__Changes_.xml
+/.idea/shelf/Uncommitted_changes_before_Update_at_09_03_2025_17_16__Changes_.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
